--- a/WMS_Monitor/WMS_Monitor.csproj
+++ b/WMS_Monitor/WMS_Monitor.csproj
@@ -56,6 +56,13 @@
     <Compile Include="Model\Discharge.cs" />
     <Compile Include="Model\KomirkaVisual.cs" />
     <Compile Include="Model\NakladnaWMS.cs" />
+    <Compile Include="Model\Tovar.cs" />
+    <Compile Include="NaklForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NaklForm.Designer.cs">
+      <DependentUpon>NaklForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TabletForm.cs">
@@ -66,6 +73,9 @@
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NaklForm.resx">
+      <DependentUpon>NaklForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
