--- a/WMS_Monitor/WMS_Monitor.csproj
+++ b/WMS_Monitor/WMS_Monitor.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChoiceNakl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChoiceNakl.Designer.cs">
+      <DependentUpon>ChoiceNakl.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataProvider.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -71,6 +77,9 @@
     <Compile Include="TabletForm.Designer.cs">
       <DependentUpon>TabletForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ChoiceNakl.resx">
+      <DependentUpon>ChoiceNakl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -122,6 +131,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Long.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="NotWork.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="shopping.png">
